# config/swagger.json
@@ -22,7 +22,7 @@
           "beacons"
         ],
         "summary": "Create a beacon",
-        "description": "",
+        "description": "AUTHORIZED",
         "operationId": "createBeacon",
         "produces": [
           "application/json"
@@ -114,7 +114,7 @@
           "beacons"
         ],
         "summary": "Delete beacon by id",
-        "description": "",
+        "description": "AUTHORIZED",
         "operationId": "deleteBeaconById",
         "produces": [
           "application/json"
@@ -222,7 +222,7 @@
           "users"
         ],
         "summary": "Create a user",
-        "description": "",
+        "description": "AUTHORIZED",
         "operationId": "createUser",
         "produces": [
           "application/json"
@@ -240,7 +240,7 @@
         ],
         "responses": {
           "201": {
-            "description": "successful creation",
+            "description": "Successful creation, without location header. A new or updated key is in the body.",
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -269,6 +269,30 @@
               "$ref": "#/definitions/User"
             }
           }
+        }
+      }
+    },
+    "/users/login": {
+      "tags": [
+        "users"
+      ],
+      "summary": "Login a user",
+      "description": "",
+      "operationId": "login",
+      "produces": [
+        "application/json"
+      ],
+      "parameters": [
+      ],
+      "responses": {
+        "200": {
+          "description": "Successfully logged in.",
+          "schema": {
+            "$ref": "#/definitions/User"
+          }
+        },
+        "401": {
+          "description": "Unauthenticated"
         }
       }
     },
@@ -387,7 +411,7 @@
           "visits"
         ],
         "summary": "Delete all of a user's visits",
-        "description": "",
+        "description": "AUTHORIZED",
         "operationId": "deleteUserById",
         "produces": [
           "application/json"
@@ -416,7 +440,7 @@
         }
       }
     },
-    "/users/{userId}/visits/{visitId}": {
+    "/users/{userId}/visits/{beaconMinorId}": {
       "get": {
         "tags": [
           "visits",
@@ -439,7 +463,7 @@
             "minimum": 1
           },
           {
-            "name": "visitId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of the visit to retrieve",
             "required": true,
@@ -485,7 +509,7 @@
             "minimum": 1
           },
           {
-            "name": "visitId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of the visit to be deleted",
             "required": true,
